# dagger

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: answer_generator.py  record_answer.py
app/api/: documents.py  health.py  queries.py
app/core/: config.py  logging.py
app/providers/: base.py  embedding_provider.py  mock_provider.py  model_roles.py  ollama_provider.py  provider_factory.py
app/retrieval/: chunker.py  context_builder.py  document_store.py  embedding_indexer.py  keyword_retriever.py  multi_document_retriever.py  pdf_text_extractor.py  query_booster.py  semantic_retriever.py
app/schemas/: document.py  embedding.py  query.py
app/security/: hashing.py
app/tests/: test_answer.py  test_documents.py  test_health.py  test_multi_document_answer.py  test_provider.py  test_queries.py  test_query_booster.py  test_record_answer.py
